# lung-tumour-study

./: CHANGELOG.md  README.md  evaluate.py  folder2txt.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  pytest-ubuntu.yml  pytest-windows.yml
classification/: README.md  compute_imbalance.py  evaluate.py  hov_att_bs5.csv  infer.py  read_graph.py  read_nodes.py  train.py  train_automl.py  train_gnn.py  train_xgboost.py
classification/logs/: 0000.pickle  01-22-2023-10-21-18automl.txt  12-09-2022-18-41-44automl.txt  12-09-2022-18-41-44results.csv  12-10-2022-16-17-00results.csv  12-10-2022-21-44-49automl.txt  xgb-by-img-cv.csv  xgb-total-cv-jan.csv
classification/logs_byimg/: 01-22-2023-16-16-12-automl.txt
classification/logs_total/: 01-22-2023-16-15-20-automl.txt  01-22-2023-16-15-20-results.csv
classification/models/: gat.py  gcn.py  hgao.py  norm.py
classification/weights/: 0000.model
demo/: app.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  contribute.rst  index.rst  installation.rst  usage.rst
hover_net/: config.py  extract_patches.py  run_infer.py  train.py
hover_net/dataloader/: augs.py  infer_loader.py  train_loader.py
hover_net/infer/: base.py  tile.py  wsi.py
hover_net/metrics/: stats_utils.py
hover_net/misc/: viz_utils.py  wsi_handler.py
postprocessing/: README.md  join_graph_gt.py  join_hovprob_graph.py  merge_cells.py  rswoosh.py
preprocessing/: README.md  centroids2png.py  geojson2pngcsv.py  hovernet2centroids.py  hovernet2geojson.py  pngcsv2centroids.py  pngcsv2geojson.py  pngcsv2graph.py
profiling/: README.md  cpairs_profile.py  rswoosh_profile.py
profiling/cpairs/: cpairs_profile1.txt  cpairs_profile2.txt  cpairs_profile3.txt  cpairs_profile4.txt
profiling/rswoosh/: rswoosh_profile_circles.txt  rswoosh_profile_circles2.txt  rswoosh_profile_circles3.txt  rswoosh_profile_circles5.txt  rswoosh_profile_circles9.txt
soft/: README.md  infer.py  model2imgs.py  soft_dataset.py  soft_utils.py  train.py
tests/: README.md  centroidspng2csv_test.py  conf_matrix_sum_test.py  cpairs_test.py  example_test.py  generate_centroids.py  generate_rswoosh.py  get_conn_comp_test.py  graph2centroids_test.py  graph_centroids_test.py  graph_idx_test.py  hov_prob_pipe_test.py  hov_prob_test.py  hovernet_patches_test.py  metrics_pairs_test.py  metrics_test.py  png2graph_test.py  pngcsv2geojson_test.py  pngcsv2graph_test.py  read_nodes_test.py  remove_idx_test.py  rswoosh_test.py  tda_test.py
tests/centroids/: circle1.B.csv  circle1.result.csv  circle10.A.csv  circle10.B.csv  circle10.result.csv  circle2.A.csv  circle2.B.csv  circle2.result.csv  circle3.A.csv  circle3.B.csv  circle3.result.csv  circle4.B.csv  circle4.result.csv  circle5.A.csv  circle5.result.csv  circle6.B.csv  circle6.result.csv  circle7.A.csv  circle7.B.csv  circle7.result.csv  circle8.A.csv  circle8.B.csv  circle8.result.csv  circle9.B.csv  circle9.result.csv  extra_points1.A.csv  extra_points1.B.csv  extra_points1.result.csv  extra_points10.A.csv  extra_points10.B.csv  extra_points10.result.csv  extra_points11.A.csv  extra_points11.B.csv  extra_points11.result.csv  extra_points12.A.csv  extra_points12.B.csv  extra_points12.result.csv  extra_points13.A.csv  extra_points13.B.csv  extra_points13.result.csv  (+240 more)
tests/graphs/: C set, VH22B002877A001001 (x=15670.0, y=23591.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=17070.0, y=22191.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=17070.0, y=23591.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=21746.0, y=20791.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=30224.0, y=15751.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=32072.0, y=14827.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=6674.0, y=13532.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=6674.0, y=14456.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=7598.0, y=13532.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=8074.0, y=12132.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001001 (x=8074.0, y=13056.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001007 (x=18737.0, y=21463.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001007 (x=19661.0, y=18691.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001007 (x=21509.0, y=30703.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001007 (x=21509.0, y=31627.0, w=1024.0, h=1024.0).nodes.csv  C set, VH22B002877A001007 (x=21509.0, y=32551.0, w=1024.0, h=1024.0).nodes.csv  (+9 more)
tumourkit/: __init__.py  eval_pipe.py  evaluate.py  infer_pipe.py  make_dirs.py  research_pipe.py  train_pipe.py
utils/: README.md  classification.py  nearest.py  postprocessing.py  preprocessing.py
(+591 files in other folders)
