[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tumourkit"
authors = [
  { name = "Jose Pérez Cano", email = "joseperez2000@hotmail.es" },
]
description = "A SDK for tumour study"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Stubs Only",
]
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
exclude = ["logos"]

[tool.setuptools.dynamic]
version = { attr = "tumourkit.__version__" }
dependencies = { file = "requirements.txt" }

[project.scripts]
hovernet2geojson = "tumourkit.preprocessing.hovernet2geojson:main"
centroids2png = "tumourkit.preprocessing.centroids2png:main"
hovernet2centroids = "tumourkit.preprocessing.hovernet2centroids:main"
geojson2pngcsv = "tumourkit.preprocessing.geojson2pngcsv:main"
pngcsv2centroids = "tumourkit.preprocessing.pngcsv2centroids:main"
pngcsv2geojson = "tumourkit.preprocessing.pngcsv2geojson:main"
pngcsv2graph = "tumourkit.preprocessing.pngcsv2graph:main"
graph2centroids = "tumourkit.preprocessing.graph2centroids:main"
centroidspng2csv = "tumourkit.preprocessing.centroidspng2csv:main"
make_dirs = "tumourkit.make_dirs:main"
run_training = "tumourkit.train_pipe:main"
run_inference = "tumourkit.infer_pipe:main"
run_research = "tumourkit.research_pipe:main"
run_evaluation = "tumourkit.eval_pipe:main"
merge_cells = "tumourkit.postprocessing.merge_cells:main"
remove_uncertain = "tumourkit.preprocessing.remove_uncertain:main"
draw_cells = "tumourkit.postprocessing.draw_cells:main"
start_app = "tumourkit.demo.app:main"